--- a/client/9Pad/index.html
+++ b/client/9Pad/index.html
@@ -50,6 +50,7 @@
         }
     </style>
     <script type="text/javascript" src="jquery-1.8.3.js"></script>
+    <script src="coordinationServer.js"></script>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
 </head>
