--- a/static_content/9.html
+++ b/static_content/9.html
@@ -15,6 +15,6 @@
     </script>
 </head>
 <body>
-    <img id="content" src="TestNote.png" alt="TestNote" style="display: none;" />
+    <img id="content" src="Content10.jpg" alt="TestNote" style="display: none;" />
 </body>
 </html>
