von localhost wieder auf den contentserver umgebogen

--- a/client/9Pad/contentView.html
+++ b/client/9Pad/contentView.html
@@ -69,8 +69,8 @@
 
                 function loadContent(contentIndex) {
                     console.log("Loading content for index ", contentIndex, " in row ", row, ", column ", column);
-                    // iframe.attr('src', 'http://' + baseIP + '/9padcontent/' + contentIndex + '.html');
-                    iframe.attr('src', '/9padcontent/' + contentIndex + '.html');
+                    iframe.attr('src', 'http://' + baseIP + '/9padcontent/' + contentIndex + '.html');
+                    // iframe.attr('src', '/9padcontent/' + contentIndex + '.html');
                 }
             });
             //-->
