--- a/client/9Pad/contentView.html
+++ b/client/9Pad/contentView.html
@@ -69,7 +69,7 @@
 
                 function loadContent(contentIndex) {
                     console.log("Loading content for index ", contentIndex, " in row ", row, ", column ", column);
-                    iframe.attr('src', 'http://' + baseIP + '/9padcontent/' + contentIndex + '.html');
+                    iframe.attr('src', '/static_content/' + contentIndex + '.html');
                     // iframe.attr('src', '/9padcontent/' + contentIndex + '.html');
                 }
             });
