--- a/static_content/6.html
+++ b/static_content/6.html
@@ -2,19 +2,8 @@
 <html>
 <head>
     <title></title>
-    <script src="jquery-1.8.3.min.js"></script>
-    <script type="text/javascript">
-        <!--
-        $(document).ready(function() {
-            var img = $('#content');
-            img.load(function() {
-                img.fadeIn();
-            });
-        });
-        // -->
-    </script>
 </head>
 <body>
-    <img id="content" src="Content7.jpg" alt="TestNote" style="display: none;" />
+<video src="master24.mp4" width="1024" height="768" controls autoplay></video>
 </body>
 </html>
