--- a/client/9Pad/contentView.html
+++ b/client/9Pad/contentView.html
@@ -14,6 +14,7 @@
                     rowParam = getQueryVariable("row"),
                     row = parseInt(rowParam),
                     connection,
+					connectionOpen = false,
                     keepAliveTimer;
 
                 initIframe();
@@ -25,14 +26,29 @@
                 }
 
                 function initWebSocket() {
-                    console.log('Opening WebSocket to ws://' + baseIP + ':1337');
                     // if user is running mozilla then use its built-in WebSocket
                     window.WebSocket = window.WebSocket || window.MozWebSocket;
+					connect();
+				}
+				
+				function connect() {
+                    console.log('Opening WebSocket to ws://' + baseIP + ':1337');
 
                     connection = new WebSocket('ws://' + baseIP + ':1337');
+					
+					connection.onopen = function () {
+						connectionOpen = true;
+						console.log("Websocket open.");
+					};
 
                     connection.onerror = function (error) {
-                        alert('Sorry, but there\'s some problem with your connection or the server is down.');
+                        //alert('Sorry, but there\'s some problem with your connection or the server is down.');
+						console.log("Connection failed. Retrying...");
+			
+						connectionOpen = false;
+
+						connection = undefined;
+						setTimeout(function() {connect(), 5000});
                     };
 
                     connection.onmessage = function(message) {
@@ -41,7 +57,6 @@
                             sendKeepAlive();
                         }
                     };
-                    console.log("WebSocket open.");
                 }
 
                 function handleUpdateMessage(message) {
