--- a/script/image_template.html
+++ b/script/image_template.html
@@ -15,6 +15,6 @@
     </script>
 </head>
 <body>
-    <img id="content" src="___SRC_FILE___" alt="TestNote" style="display: none;" />
+    <img id="content" src="___SRC_FILE___" alt="Content" style="display: none;" />
 </body>
 </html>
