--- a/script/image_template.html
+++ b/script/image_template.html
@@ -16,5 +16,12 @@
 </head>
 <body>
     <img id="content" src="___SRC_FILE___" alt="Content" style="display: none;" />
+	
+	<!-- Alternative display of high and narrow images, e.g. web screen shots. Play with dimensions depending on image resolution.
+	<div align="center">
+		<img id="content" src="___SRC_FILE___" width="75%" alt="Content" style="display: none;" />
+	</div>
+	-->
+	
 </body>
 </html>
