--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
   <head>
     <title>MatrixZ iPad Matrix</title>
 	<style>
-	  body      {font-family: verdana, sans-serif; width: 80%;margin-left:10%;margin-top:50px;background-color:black;color:white}
+	  body      {
+					font-family: verdana, sans-serif; 
+					font-size: xx-large;
+					width: 80%;
+					margin-left:10%;
+					margin-top:50px;
+					background-color:black;
+					color:white
+				}
 	  a         {color: lightgray;}
 	  a:visited {color: darkgray;}
     </style>
   </head>
   <body>
-	<p style="font-size:x-large">MatrixZ iPad Matrix</p>
+	<p style="font-size:xxx-large">MatrixZ iPad Matrix</p>
 	
+	<p style="font-size:larger">
 	This is the MatrixZ web server serving the client application.
-	<p/>
-	<a href="client/9Pad/index.html">Start Client</a> (select client position)
+	</p>
 	
+	<p>
+	<a href="client/9Pad/index.html">Start Client</a> (select client position)
+	</p>
+	<a href="static_content/C28.mp4">Movie 1</a> <br/>
+	<a href="static_content/C29.mp4">Movie 2</a> <br/>
+	</p>
   </body>
 </html>
  
